--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,22 @@
 cache/
 out/
 
+tmp/
+
+**/.DS_Store
+
+web/src/artifacts/*
+!web/src/artifacts/.gitkeep
+
+tmp/*
+!tmp/.gitkeep
+
+broadcast/DeployAnvil.s.sol/*/*
+#!broadcast/DeployAnvil.s.sol/*/run-latest.json
 # Ignores development broadcast logs
-!/broadcast
-/broadcast/*/31337/
-/broadcast/**/dry-run/
+# !/broadcast
+# /broadcast/*/31337/
+# /broadcast/**/dry-run/
 
 # Docs
 docs/
