Deploy script for Anvil

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ web/src/artifacts/*
 tmp/*
 !tmp/.gitkeep
 
-broadcast/DeployAnvil.s.sol/*/*
+broadcast/DeployAnywhere.s.sol/31337
 #!broadcast/DeployAnvil.s.sol/*/run-latest.json
 # Ignores development broadcast logs
 # !/broadcast
