--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
     "Bufficon",
     "incentivized",
     "racle",
-    "trustlessly"
+    "trustlessly",
+    "Zircuit"
   ],
   "solidity.packageDefaultDependenciesContractsDirectory": "src",
   "solidity.packageDefaultDependenciesDirectory": "lib"
