Deployments: All OK except Hedera Testnet

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "incentivized",
     "racle",
     "trustlessly",
+    "Unichain",
     "Zircuit"
   ],
   "solidity.packageDefaultDependenciesContractsDirectory": "src",
